deploy/https-setting/curr/devmeet-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devmeet-gateway
  namespace: devmeet
  annotations:
    # certmanager가 staging 인증서를 secret로 생성해서 넣어둔다. ( 브라우저에게는 신뢰되지 않는 인증서라고 알려준다. )
    cert-manager.io/cluster-issuer: letsencrypt-staging 
    
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.devmeet.p-e.kr
      secretName: devmeet-tls
  rules:
    - host: www.devmeet.p-e.kr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: main-backend-svc
                port:
                  number: 8080
          - path: /tool
            pathType: Prefix
            backend:
              service:
                name: tool-backend-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
